#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["fruzitent <fruzit@gmail.com>"]
description = "s3_dsa/p01"
edition = "2021"
license-file = "license.md"
name = "p01"
readme = "readme.md"
repository = "git+https://github.com/fruzitent/kpi.git"
version = "0.1.0"

[build-dependencies]

[dependencies]
bytemuck = "1.19.0"
fern = "0.7.0"
humantime = "2.1.0"
log = "0.4.22"
nanorand = "0.7.0"

[features]
