#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = ["./src/bin/classic_bee/"]
members = [
  "./src/bin/classic_bee/", 
  "./src/widget/perf/",
]
resolver = "2"

[workspace.dependencies]
egui = "0.29.1"
log = "0.4.22"

perf = { path = "./src/widget/perf/" }

[workspace.package]
authors = ["fruzitent <fruzit@gmail.com>"]
description = "s3_dsa/p04"
edition = "2021"
license-file = "license.md"
readme = "readme.md"
repository = "git+https://github.com/fruzitent/kpi.git"
