#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
egui = { optional = true, workspace = true }

[dev-dependencies]

[features]
egui = ["dep:egui"]

[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
name = "perf"
readme.workspace = true
repository.workspace = true
version = "0.1.0"
